kubernetes/apps/observability/grafana/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  labels:
    route-label: external-dns-internal
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-system
      sectionName: grafana
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: grafana
          port: 8080
